[gd_scene load_steps=5 format=3 uid="uid://c7pcrpp8inqwr"]

[ext_resource type="StyleBox" uid="uid://do4htudar5aa" path="res://assets/ui/test-panel.stylebox" id="1_0xr5m"]
[ext_resource type="Script" path="res://scenes/TestRunner.gd" id="2_o4xdp"]
[ext_resource type="FontFile" uid="uid://ck2sp0iypcks" path="res://assets/fonts/RobotoMono-Regular.ttf" id="3_p35dm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4q56"]
bg_color = Color(0.290196, 0.290196, 0.290196, 1)

[node name="TestRunner" type="PanelContainer"]
offset_top = 3.0
offset_right = 493.0
offset_bottom = 372.0
theme_override_styles/panel = ExtResource("1_0xr5m")
script = ExtResource("2_o4xdp")

[node name="M" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VB" type="VBoxContainer" parent="M"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="M/VB"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_j4q56")
text = "The Title"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="M/VB"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_p35dm")
bbcode_enabled = true
text = "[b]Lorem Ipsum[/b] is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
scroll_following = true

[node name="HB" type="HBoxContainer" parent="M/VB"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Step" type="Button" parent="M/VB/HB"]
layout_mode = 2
text = "Step"

[node name="Play" type="Button" parent="M/VB/HB"]
layout_mode = 2
text = "Play"

[node name="Stop" type="Button" parent="M/VB/HB"]
layout_mode = 2
text = "Stop"

[node name="Reset" type="Button" parent="M/VB/HB"]
layout_mode = 2
text = "Reset"

[node name="Control" type="Control" parent="M/VB/HB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Speed" type="HSlider" parent="M/VB/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
tooltip_text = "Set play speed"
max_value = 30.0
step = 0.0
value = 10.0

[node name="Alpha" type="HSlider" parent="M/VB/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
tooltip_text = "Set background transparency"
min_value = 10.0
value = 10.0

[node name="CloseButton" type="Button" parent="M/VB/HB"]
layout_mode = 2
text = "Close"

[connection signal="gui_input" from="M" to="." method="_on_margin_container_gui_input"]
[connection signal="mouse_entered" from="M" to="." method="_on_margin_container_mouse_entered"]
[connection signal="mouse_exited" from="M" to="." method="_on_margin_container_mouse_exited"]
[connection signal="gui_input" from="M/VB/Title" to="." method="_on_title_gui_input"]
[connection signal="mouse_entered" from="M/VB/Title" to="." method="_on_title_mouse_entered"]
[connection signal="mouse_exited" from="M/VB/Title" to="." method="_on_title_mouse_exited"]
[connection signal="pressed" from="M/VB/HB/Step" to="." method="_on_step_pressed"]
[connection signal="pressed" from="M/VB/HB/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="M/VB/HB/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="M/VB/HB/Reset" to="." method="_on_reset_pressed"]
[connection signal="value_changed" from="M/VB/HB/Speed" to="." method="_on_speed_value_changed"]
[connection signal="value_changed" from="M/VB/HB/Alpha" to="." method="_on_alpha_value_changed"]
[connection signal="pressed" from="M/VB/HB/CloseButton" to="." method="_on_close_button_pressed"]
